Update swagger spce
